--- a/module/Post/view/post/post/view.phtml
+++ b/module/Post/view/post/post/view.phtml
@@ -1,33 +1,3 @@
-<?php
+<?php echo $this->postViewWidget($post->get(\Post\Model\Post::POST_ID)); ?> 
 
-use \Post\Model\Post;
-
-$sm = $this->getServiceLocator();
-?>
-
-<?php if ($post->get('user_id') == $sm->get('logged_in_user_id')) : ?>
-
-    <a href="/post/edit/<?php echo $post->get(Post::POST_ID); ?>">edit</a>
-    <a href="/post/delete/<?php echo $post->get(Post::POST_ID); ?>">del</a>
-
-<?php endif; ?>
-
-<div class="post">
-    <div class="post-id">
-        <?php echo $post->get(Post::POST_ID); ?>
-    </div>
-    <div class="post-title">
-        <?php echo $post->get(Post::TITLE); ?>
-    </div>
-    <div class="post-text">
-        <?php echo $post->get(Post::TEXT); ?>
-    </div>
-    <div class="post-public">
-        <?php echo $post->get(Post::PUBISH); ?>
-    </div>
-    <div class="post-tags">
-        <?php echo $post->get(Post::TAGS); ?>
-    </div>
-</div>
-
-<?php echo $this->viewAttachmentWidget($post->get(Post::POST_ID)); ?>
+<?php echo $this->viewAttachmentWidget($post->get(\Post\Model\Post::POST_ID)); ?>
