--- a/module/Search/view/search/search/index.phtml
+++ b/module/Search/view/search/search/index.phtml
@@ -5,7 +5,7 @@
 
         <?php foreach ($posts as $post) : ?>
 
-            <?php echo $this->postExcerptViewWidget($post->get('post_id')); ?> 
+            <?php echo $this->postPreviewWidget($post->get(\Post\Model\Post::POST_ID)); ?> 
 
         <?php endforeach; ?>
 
