--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -15,6 +15,9 @@
                 ->prependFile($this->basePath() . '/js/respond.min.js', 'text/javascript', array('conditional' => 'lt IE 9',))
                 ->prependFile($this->basePath() . '/js/html5shiv.js', 'text/javascript', array('conditional' => 'lt IE 9',));
         ?>
+        
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+        
     </head>
     <body class="<?php echo $this->controllerName(); ?>">
 
@@ -33,6 +36,7 @@
                 <div class="wrap-menu">
                     <div class="menu">
                         <a href="/">main</a><br/>
+                        <a href="/user/info">user</a>
                         <a href="/post/list">post</a><br/>
                         <a href="/post/add">post+</a><br/>
                         <a href="/upload">upload</a>
