--- a/module/Post/view/helper/post/edit.phtml
+++ b/module/Post/view/helper/post/edit.phtml
@@ -6,13 +6,9 @@ $form->prepare();
 <div class="widget">
     <div class="widget-title"> 
         post edit widget <?php echo '[p:' . $post->get('post_id') . ']'; ?>
-
-        <div class="view-link" style="float: right;">
-            <a href="/post/view/<?= $post->get('post_id'); ?>">view</a>
-        </div>
-
     </div>
     <div class="widget-body">
+
         <?php echo $this->form()->openTag($form); ?>
         <div class="form-list">
             <?php foreach ($form as $element) : ?>
@@ -24,5 +20,10 @@ $form->prepare();
             <?php endforeach; ?>
         </div>
         <?php echo $this->form()->closeTag(); ?>
+
+        <div class="view-link">
+            <a href="/post/view/<?= $post->get('post_id'); ?>">view</a>
+        </div>
+
     </div>
 </div>
