--- a/module/Post/view/helper/post/view.phtml
+++ b/module/Post/view/helper/post/view.phtml
@@ -1,14 +1,6 @@
 <div class="widget">
     <div class="widget-title"> 
         post view widget <?php echo '[p:' . $post->get('post_id') . ']'; ?>
-
-        <div class="actions" style="float:right;">
-            <?php if ($post->get('user_id') == $sm->get('logged_in_user_id')) : ?>
-                <a href="/post/edit/<?php echo $post->get(\Post\Model\Post::POST_ID); ?>">edit</a>
-                <a href="/post/delete/<?php echo $post->get(\Post\Model\Post::POST_ID); ?>">del</a>
-            <?php endif; ?>
-        </div>
-
     </div>
     <div class="widget-body">
         <div class="author">
@@ -22,6 +14,12 @@
         </div>
         <div class="public">
             <?= 'public: ' . $post->get('public'); ?>
+        </div>
+        <div class="actions">
+            <?php if ($post->get('user_id') == $sm->get('logged_in_user_id')) : ?>
+                <a href="/post/edit/<?php echo $post->get(\Post\Model\Post::POST_ID); ?>">edit</a>
+                <a href="/post/delete/<?php echo $post->get(\Post\Model\Post::POST_ID); ?>">del</a>
+            <?php endif; ?>
         </div>
     </div>
 </div>
