--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+html {
+    font-family: 'Open Sans', sans-serif !important;  
+    font-size: 14px !important; 
+}
 body {
     background-image: url('../img/bg/bg01.png');
 }
@@ -9,13 +13,13 @@ body {
 }
 .error {
     color: #ff0000;
-    font-size: 12px;
 }
 .clear {
     clear: both;
 }
 .label {
     color: #ccc;
+    padding: 5px;
 }
 /*.block-id, .block-user_id, .block-post_id {
     display: none;
@@ -35,6 +39,20 @@ input[type=search],
 textarea {
     border: 1px solid #ccc;
     padding: 5px;
+    font-family: inherit;
+    font-size: inherit;
+}
+textarea:focus {
+    border: 1px solid #ccc;
+    padding: 5px;
+}
+input[readonly=readonly] {
+    color: #ccc;
+    background: #F7F3F7;
+}
+a {
+    color: #83BF29;
+    text-decoration: none;
 }
 /* header */
 .wrap-header .header {
