--- a/module/Post/view/helper/post/edit.phtml
+++ b/module/Post/view/helper/post/edit.phtml
@@ -9,20 +9,12 @@ $form->prepare();
     </div>
     <div class="widget-body">
 
-        <?php echo $this->form()->openTag($form); ?>
-        <div class="form-list">
-            <?php foreach ($form as $element) : ?>
-                <div class="<?php echo 'block-' . $element->getName(); ?>">
-                    <div class="label"><?php echo $this->formLabel($element); ?></div>
-                    <div class="error"><?php echo $this->formElementErrors($element); ?></div>
-                    <div class="field"><?php echo $this->formElement($element); ?></div>
-                </div>
-            <?php endforeach; ?>
-        </div>
-        <?php echo $this->form()->closeTag(); ?>
-
-        <div class="view-link">
+        <div class="view-link item">
             <a href="/post/view/<?= $post->get('post_id'); ?>">view</a>
+        </div>
+
+        <div class="item">
+            <?php echo $this->formWidget($this->form); ?>
         </div>
 
     </div>
