--- a/module/Post/view/post/post/edit.phtml
+++ b/module/Post/view/post/post/edit.phtml
@@ -1,6 +1,6 @@
-<?php echo $this->postEditWidget($post->get(\Post\Model\Post::POST_ID)); ?>
+<?php echo $this->postEditWidget($postId); ?>
 
-<?php echo $this->addAttachmentWidget($post->get(\Post\Model\Post::POST_ID)); ?>
+<?php echo $this->addAttachmentWidget($postId); ?>
 
-<?php echo $this->viewAttachmentWidget($post->get(\Post\Model\Post::POST_ID)); ?>
+<?php echo $this->viewAttachmentWidget($postId); ?>
 
