--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -16,7 +16,7 @@
                 ->prependFile($this->basePath() . '/js/html5shiv.js', 'text/javascript', array('conditional' => 'lt IE 9',));
         ?>
         
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+        <!--<link href='http://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'>-->
         
     </head>
     <body class="<?php echo $this->controllerName(); ?>">
@@ -39,6 +39,7 @@
                         <a href="/user/info">user</a>
                         <a href="/post/list">post</a><br/>
                         <a href="/post/add">post+</a><br/>
+                         <a href="/category/list">categ.</a><br/>
                         <a href="/upload">upload</a>
                         <a href="/dialog">dialog</a>
                     </div>
