--- a/module/Search/view/helper/search/form.phtml
+++ b/module/Search/view/helper/search/form.phtml
@@ -1,4 +1,4 @@
-<div class="widget">
+<div class="widget search-widget">
     <div class="widget-title">search form widget</div>
     <div class="widget-body">
 
