--- a/module/Post/view/post/post/edit.phtml
+++ b/module/Post/view/post/post/edit.phtml
@@ -1,6 +1,16 @@
-<?php echo $this->postEditWidget($postId); ?>
 
-<?php echo $this->addAttachmentWidget($postId); ?>
 
-<?php echo $this->viewAttachmentWidget($postId); ?>
+<div class="wrap-content">
+    <div class="content">
+        <?php echo $this->postEditWidget($postId); ?>
+        <?php echo $this->addAttachmentWidget($postId); ?>
+        <?php echo $this->viewAttachmentWidget($postId); ?>
+    </div>
+</div>
 
+
+<div class="wrap-sidebar">
+    <div class="sidebar">
+        
+    </div>
+</div>
