--- a/public/css/style.css
+++ b/public/css/style.css
@@ -205,6 +205,9 @@ a {
 .content .widget {
     width: 100%;
 }
+.sidebar .widget {
+    width: 100%;
+}
 .wrap-body .body .wrap-sidebar {
     width: 240px;
     float: right;
@@ -212,7 +215,6 @@ a {
 .wrap-body .body .wrap-sidebar .sidebar {
     background-color: #f3f3f3;
     min-height: 500px;
-    opacity: 0.5;
 }
 /* search result */
 .search-result-item {
@@ -268,8 +270,7 @@ a {
 .widget {
     border: 1px solid #e5e5e5;
     background: #fff;
-    /* margin: 10px; */
-    float: left;
+    box-sizing: border-box;
 }
 .widget-title {
     height: 30px;
@@ -277,7 +278,7 @@ a {
     padding: 0px 10px;
 }
 .widget-body {
-    padding: 10px;
+    padding: 8px;
     border-top: 1px solid #e5e5e5;
 }
 .dialog-item {
@@ -339,6 +340,9 @@ a {
     height: 180px;
     border: 3px solid #FFF;
     background-color: #1D9422;
+}
+.random-property-widget table td img {
+    float: left;
 }
 .random-property-widget .widget-title {
     display: block;
