--- a/module/User/view/helper/user/panel.phtml
+++ b/module/User/view/helper/user/panel.phtml
@@ -6,7 +6,7 @@
         <div class="widget-body">
             <div class="user-section">
                 <div class="ad">
-                    <a class="add" rel="nofollow"  href="/post/add">Добавить объявление</a>
+                    <a class="add" rel="nofollow"  href="/realty/add">Добавить объявление</a>
                 </div>
 
                 <div class="cab">
