add Realty module

--- a/module/Realty/view/realty/realty/index.phtml
+++ b/module/Realty/view/realty/realty/index.phtml
@@ -1,1 +1,14 @@
-Action "index", controller "Realty", module "Realty".
+<div class="wrap-content">
+    <div class="content">
+
+        <a href="/realty/add">add</a>
+
+    </div>
+</div>
+
+
+<div class="wrap-sidebar">
+    <div class="sidebar">
+
+    </div>
+</div>
