--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -34,7 +34,7 @@ $user = $userTable->getUserById($loggedInUserId);
 
 <div class="wrap-sidebar">
     <div class="sidebar">
-        <?php echo $this->userViewWidget($user->get('user_id')); ?>
+        <?php //echo $this->userViewWidget($user->get('user_id')); ?>
         <?php //if (isset($user)) : ?> 
             <?php //echo "you logged in as: " . $user->get(\User\Model\User::DISPLAY_NAME); ?>
         <?php //endif; ?>
